--- a/registro.html
+++ b/registro.html
@@ -69,14 +69,14 @@
         <button onclick="obterInformacoesSobreAuditorias()">Buscar Informacoes</button>
       </div>
       <br />
-      <div>Nome da Empresa Auditada: <span id="nomeDaEmpresa"></span></div>
-      <div>Nome do Escritório responsável pela carteira de processos: <span id="nomeDoEscritorio"></span></div>
-      <div>Período de Apuração: <span id="periodoDeApuracao"></span></div>
-      <div>Quantidade de Processos Ativos: <span id="processosAtivos"></span></div>
-      <div>Valor Remoto: <span id="valorRemoto"></span></div>
-      <div>Valor Possível: <span id="valorPossivel"></span></div>
-      <div>Valor Provável: <span id="valorProvavel"></span></div>
-      <div>Valor Total: <span id="valorTotal"></span></div>
+      <div>Nome da Empresa Auditada: <span id="paramNomeDaEmpresa"></span></div>
+      <div>Nome do Escritório responsável pela carteira de processos: <span id="paramNomeDoEscritorio"></span></div>
+      <div>Período de Apuração: <span id="paramPeriodoDeApuracao"></span></div>
+      <div>Quantidade de Processos Ativos: <span id="paramProcessosAtivos"></span></div>
+      <div>Valor Remoto: <span id="paramValorRemoto"></span></div>
+      <div>Valor Possível: <span id="paramValorPossivel"></span></div>
+      <div>Valor Provável: <span id="paramValorProvavel"></span></div>
+      <div>Valor Total: <span id="paramValorTotal"></span></div>
     </section>
     <script
       type="text/javascript"
