--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="#">Início</a></li>
+          <li><a href="index.html">Início</a></li>
           <li><a href="#">Sobre</a></li>
           <li><a href="registro.html">Registro em Blockchain</a></li>
           <li><a href="#">Contato</a></li>
