--- a/registro.html
+++ b/registro.html
@@ -66,7 +66,7 @@
       <div>
         Para pesquisar as auditorias anteriores, informe o numero de registro:
         <input type="number" name="contractNumber" id="contractNumber" size="10" min="1" max="99999" />
-        <button onclick="obterInformacoesSobreAuditorias()">Buscar Informacoes</button>
+        <button onclick="obterDadosDoContrato()">Buscar Informacoes</button>
       </div>
       <br />
       <div>Nome da Empresa Auditada: <span id="nomeDaEmpresa"></span></div>
