--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
     <header>
       <nav>
-        <a class="logo" href="/">Audichain</a>
+        <a class="logo" href="https://rafaprates90.github.io/trabalhofinal/">Audichain</a>
         <div class="mobile-menu">
           <div class="line1"></div>
           <div class="line2"></div>
