--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
     <header>
       <nav>
-        <a class="logo" href="https://rafaprates90.github.io/trabalhofinal/">Audichain</a>
+        <a class="logo" href="/index.html">Audichain</a>
         <div class="mobile-menu">
           <div class="line1"></div>
           <div class="line2"></div>
@@ -19,12 +19,14 @@
           <li><a href="index.html">Início</a></li>
           <li><a href="#">Sobre</a></li>
           <li><a href="registro.html">Registro em Blockchain</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
       <h1>Registre o resultado das auditorias em Blockchain </h1>
     </header>
     <section>
-    
+      <footer>
+        <h6 style="text-align: center;"><strong>© 2021 - Prates. All rights reserved.</strong></h6>
+      </footer>
   </body>
 </html>
