--- a/registro.html
+++ b/registro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilo-site.css" />
-    <title>Audichain</title>
+     <title>Audichain</title>
   </head>
   <body onload="autoLoadOwner()">
     <header>
@@ -17,10 +17,10 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="#">Início</a></li>
+          <li><a href="/index.html">Início</a></li>
           <li><a href="#">Sobre</a></li>
-          <li><a href="#">Registro em Blockchain</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="/registro.html">Registro em Blockchain</a></li>
+          <li><a href="/contato.html">Contato</a></li>
         </ul>
       </nav>
       <h1>Registre o resultado das auditorias em Blockchain </h1>
