--- a/registro.html
+++ b/registro.html
@@ -23,8 +23,9 @@
           <li><a href="/contato.html">Contato</a></li>
         </ul>
       </nav>
-      <h1>Registre o resultado das auditorias em Blockchain </h1>
-      <br />
+      <div class="jumbotron text-center bg-primary text-white">
+        <h2><i class="fa fa-plus-circle mr-3"></i>Registre o resultado da sua auditoria em Blockchain</h2>
+        <br>
     </header>
     <section>
       <form action="#" method="POST" name="frmAuditoria" id="frmAuditoria">
