--- a/registro.html
+++ b/registro.html
@@ -17,10 +17,10 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="/index.html">Início</a></li>
+          <li><a href="index.html">Início</a></li>
           <li><a href="#">Sobre</a></li>
-          <li><a href="/registro.html">Registro em Blockchain</a></li>
-          <li><a href="/contato.html">Contato</a></li>
+          <li><a href="registro.html">Registro em Blockchain</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
       <div class="jumbotron text-center bg-primary text-white">
