--- a/contato.html
+++ b/contato.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../style.css">
-  <title>Contatos</title>
-</head>
+<html lang="pt">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilo-site.css" />
+        
+     <title>Audichain</title>
+  </head>
+    <header>
+      <nav>
+        <a class="logo" href="/">Audichain</a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="index.html">Início</a></li>
+          <li><a href="faq.html">Sobre</a></li>
+          <li><a href="registro.html">Registro em Blockchain</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </nav>
+      <style>
+        body {
+          background-color: #b8b8b9;
+        }
+        </style>
 <body>
-  <div class="link-tree">
-    <img src="img/foto.png" alt="rafaphoto">
+      <img src="img/foto.png" alt="rafaphoto">
     <h1>Rafael Canuto Prates</h1>
-    <a href="https://www.linkedin.com/in/rafaelcanutoprates/">Linkedin</a>
-    <a href="https://github.com/rafaprates90">Github</a>
-    <a href="mailto:rafaelcanutodecarvalho@yahoo.com.br">Email</a>
-  </div>
-  <br></br>
-  <footer>
+    <h3>Entre em contato através do <a href="http://api.whatsapp.com/send?phone=5511967580208"><img class="img-responsive" src="img/iconwts.jpg" width="25" height="25" alt="Clique aqui para acessar o WhatsApp"/></a> ou pelas redes sociais
+    <a href="https://www.linkedin.com/in/rafaelcanutoprates/"><img class="img-responsive" src= "img/lkd.jpg" width="25" height="25" alt="Clique aqui para acessar o Linkedin"></a>
+    <a href="https://github.com/rafaprates90"><img class="img-responsive" src= "img/githlogo.jpg" width="25" height="25" alt="Clique aqui para acessar o Github"></a>
+    <a href="mailto:rafaelcanutodecarvalho@yahoo.com.br"><img class="img-responsive" src= "img/email.jpg" width="25" height="25" alt="Clique aqui para enviar um e-mail></a> <br>
+    <p>
+    
+    <footer>
     <h6 style="text-align: center;"><strong>© 2021 - Prates. All rights reserved.</strong></h6>
   </footer>
 </body>
