--- a/index.html
+++ b/index.html
@@ -17,12 +17,28 @@
         </div>
         <ul class="nav-list">
           <li><a href="index.html">Início</a></li>
-          <li><a href="#">Sobre</a></li>
+          <li><a href="faq.html">Sobre</a></li>
           <li><a href="registro.html">Registro em Blockchain</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
-      <h1>Registre o resultado das auditorias em Blockchain </h1>
+      <style>
+        body {
+          background-color: #b8b8b9;
+        }
+        </style>
+
+<h1>Como Funciona:</h1>
+<p class="w3-large">Após o registro, Você terá acesso ao hash (código único e exclusivo) que traz o carimbo de tempo atestando a data e horário das informações. Com eles, você consegue comprovar a autenticidade das demonstrações.</p>
+<br>
+<h1>A Blockchain:</h1>
+<p class="w3-large">Com o registro em Blockchain, é possível comprovar a existência e a autenticidade da sua auditoria. Ela recebe ainda uma camada adicional de proteção que indica a data e horário exatos em que o arquivo a declaração dos valores foi realizada. Dessa forma, é possível se respaldar contra fraudes contáveis.</p>
+<br>
+<h1>Validade Jurídica:</h1>
+<p class="w3-large">A validade deriva da Medida Provisória 2200-2/2001, que dispõe sobre a comprovação de autoria e integridade de documentos em forma eletrônica. Ela segue ainda o disposto nos artigos 411, II, do Código de Processo Civil, e 107 do Código Civil.</p>
+<br>
+      <h1>Ficou com dúvida? Entenda no video abaixo como funcionam os Smart Contracts: </h1>
+      <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/571829912?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="SMART CONTRACTS"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     </header>
     <section>
       <br>
